// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelList component should render correctly with status prop 1`] = `
<styled.label
  status="Completed"
>
  Test label
</styled.label>
`;

exports[`LabelList component should render correctly without status prop 1`] = `
<styled.label>
  Test label
</styled.label>
`;
